chore: ignora flujos de datos Zone.Identifier en Windows

--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+      <!-- Menú principal -->
+  <nav id="mainNav" class="main-nav">
+      <!-- Zona de logo -->
+  <div class="nav-logo">
+    <a href="#top">
+      <img src="img/logo.png" alt="Estudio Jurídico Penal Alda" />
+    </a>
+  </div>
+  <!-- Zona de enlaces -->
+    <ul class="nav-links">
+      <li><a href="#penal">Área Penal</a></li>
+      <li><a href="#legal">Medicina Legal</a></li>
+      <li><a href="#delitos-economicos">Delitos Económicos</a></li>
+      <li><a href="#delitos-juveniles">Delitos Juveniles</a></li>
+      <li><a href="#constitucional">Constitucional</a></li>
+      <li><a href="#formulario">Contacto</a></li>
+    </ul>
+  </nav>
     <!--encabezado-->
     <header>
         <div class="encabezado">
@@ -22,6 +40,7 @@
     </header>
 
     <!--primera seccion-->
+    <main>
     <section>
              <h2>Asesoria Legal</h2>
         <div id="penal" class="primera-seccion">
@@ -115,6 +134,7 @@
         </form>
         <div id="formMessage" class="form-message"></div>
     </section>
+    </main>
 
     <!--footer-->
 <footer>
