Actualizacion de  estilos, JS y assets del proyecto

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
     </ul>
   </nav>
     <!--encabezado-->
-    <header>
-        <div class="encabezado">
-        <h1>Estudio Jurídico Penal Alda</h1>
-        </div>
-        <div class="banner">
-            <img src="img/portadas.png" alt="banner">
-            <p>Somos un estudio jurídico especializado exclusivamente en Derecho Penal y sus ramas.  
-                Brindamos defensa y asesoría integral en casos de delitos, peritajes forenses y protección de derechos fundamentales.</p>
-        </div>
-    </header>
+  <header>
+  <!-- Hero Banner -->
+  <section class="hero">
+    <div class="hero-overlay">
+      <h2>Estudio Jurídico Penal Alda</h2>
+      <p>Defensa y asesoría integral en casos penales, peritajes forenses y protección de tus derechos fundamentales.</p>
+      <a href="#formulario" class="hero-btn">Contáctanos</a>
+    </div>
+  </section>
+</header>
 
     <!--primera seccion-->
     <main>
@@ -79,7 +79,7 @@
             <h4>Delitos Juveniles</h4>
             <p> Asesoramos en procedimientos penales para menores de edad,
                 enfocándonos en medidas socioeducativas y reinserción efectiva.</p>
-            <img src="img/DerechoLaboral.png" alt="..." style="width: 200px; height: 120px">
+            <img src="img/juvenil.png" alt="..." style="width: 200px; height: 120px">
         </div>
     </section>
 
@@ -128,7 +128,7 @@
 
             <label for="aceptas-terminos">
             <input type="checkbox" id="aceptas-terminos" name="aceptas_terminos" required>
-            Acepto los terminos y condiciones
+            <small> Acepto los terminos y condiciones </small>
             </label> 
             <br><br><input type="submit" value="Enviar"> 
         </form>
@@ -138,7 +138,7 @@
 
     <!--footer-->
 <footer>
-  <div class="footer-inner container">
+  <div class="footer-inner">
     <nav class="footer-links">
       <a href="#sobre-nosotros">Sobre nosotros</a>
       <a href="#contacto">Contacto</a>
